k8s多集群布置/ingress/ingress-controller-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-kic-svc
  namespace: nginx-ingress
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: ngx-kic-dep
  type: NodePort
